# praw-cli

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
docs/: getting-started.md
docs/development/: architecture.md  contributing.md  decisions.md
docs/usage/: commands.md  outputs.md  pipelines-filters.md  reproducibility.md
src/prawler/: __init__.py  __main__.py  config.py
src/prawler/cli/: app.py  options.py
src/prawler/cli/commands/: __init__.py  comments.py  posts.py  search.py  user.py
src/prawler/client/: reddit_praw.py
src/prawler/crawler/: __init__.py  comment.py  post.py
src/prawler/model/: __init__.py  comment.py  post.py
src/prawler/output/: __init__.py  base.py  formatters.py  registry.py  sinks.py
src/prawler/pipeline/: __init__.py  filters.py  stage.py  transforms.py
src/prawler/reader/: __init__.py  reader.py
src/prawler/tests/: test__cli__commands__comments.py  test__pipeline__filters.py
