[project]
name = "prawler"
version = "0.4.0"
description = "Composable Reddit crawler CLI with lazy pipelines, powerful filtering, reproducible datasets, and flexible output formats."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "praw>=8.0.2",
    "tenacity>=9.1.4",
    "typer[all]>=0.12.0",
]

[project.scripts]
prawler = "prawler.cli:app"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 200

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
